--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "socket.io": "^4.8.1",
+    "vercel": "^41.6.2",
     "web-push": "^3.6.7"
   },
   "devDependencies": {
